# leaf_growth_simulation

./: CMakeLists.txt  Clarkson-Delaunay.cpp  Clarkson-Delaunay.h  README.md  Untitled Document 1  arena.py  arrays.h  config.cym.tpl  createTriangles.h  delaunay _raw_text.txt  delaunay.hpp  draw_triangles_raw.txt  evolve.config  evolve.py  finley_object.h  fitness.h  genetics.config  genetools.py  graphics.h  hormone.h  main.cc  meeting_notes_for_finley.txt  object.h  outputFourierCoeffs.csv  param.h  params.cym  physics.cpp  polish.h  preconfig.py  random.h  sigmoid.h  sim3  simplistic.c  springs.h  temp_code.txt  vector.h  writing.h
GA/: arena.py  config.cym.tpl  evolve.config  example.cym  frap  genetics.config  genetools.py  targetCoeffs.txt
GA/gen0000/: config.cym.tpl  generation.txt  genetics.config
GA/gen0000/0000/: config0000.cym
GA/gen0000/0001/: config0000.cym
GA/gen0000/0002/: config0000.cym
finley_GA/: arena.py  config.cym  creature.py  frap  genetics.config  genetics.py  genetools.py
finley_GA/gen0000/: generation.txt
finley_GA/gen0000/0000/: all_results.txt  config0000.cym
finley_GA/gen0000/0001/: all_results.txt  config0000.cym
finley_GA/gen0000/0002/: all_results.txt  config0000.cym  outputFourierCoeffs.csv
gen0000/: generation.txt  genetics.config
gen0000/0000/: config0000.cym
gen0000/0001/: config0000.cym
gen0000/0002/: config0000.cym
gen0000/0003/: config0000.cym
gen0000/0004/: config0000.cym
gen0000/0005/: config0000.cym
gen0000/0006/: config0000.cym
gen0000/0007/: config0000.cym
gen0000/0008/: config0000.cym
gen0000/0009/: config0000.cym
